UI Updates - Prevented code spans from wrapping - Added a maximum width for display content to read more like a regular webpage

--- a/noteRenderer/src/app/components/codeview/codeview.component.sass
+++ b/noteRenderer/src/app/components/codeview/codeview.component.sass
@@ -6,10 +6,10 @@
 	overflow-y: scroll
 	width: inherit
 
-.scrollContent
+.scroll-content
 	width: inherit
 	word-wrap: break-word
 	white-space: normal
-	width: inherit
+	max-width: 1200px
 	
 
