--- a/noteRenderer/src/markdown.sass
+++ b/noteRenderer/src/markdown.sass
@@ -49,6 +49,7 @@ a
 	background-color: $md-codespan-background
 	color: #EB236C
 	font-family: 'Ubuntu Mono', monospace
+	white-space: nowrap
 
 .md-strong
 	font-weight: 15pt
